--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,50 @@
-.navbar-default,
-.navbar-nav >li > a,
-.dropdown-menu {
-  font-family: 'Josefin Sans', sans-serif;
+.dropdown > .dropdown-toggle a {
   text-transform: uppercase;
-  background-color: #C8F57A;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
+}
+
+.dropdown-menu {
+  text-transform: uppercase;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.dropdown:hover,
+.dropdown:focus,
+.dropdown-toggle:hover {
+  background-color: #a3cc53
+}
+
+.navbar {
+  text-transform: uppercase;
+  background-color: #c8f57a;
   border: 0px;
-  color: #2D4207;
 }
 
 .dropdown-menu,
 .dropdown-menu:hover,
 .dropdown-menu:focus {
-  background-color: #BAE66E;
+  background-color: #bae66e;
+  border: 0px;
 }
 
-.dropdown-menu .divider,
+.navbar-collapse .navbar-right > .active > a,
+.navbar-collapse .navbar-right > .active > a:hover {
+  background-color: #aed966;
+}
+
+.nav-item:hover,
+.dropdown:hover {
+  background-color: #7c9e41;
+}
+
 .dropdown-menu > li > a:hover {
-  background-color: #7C9E41;
+  background-color: #7c9e41;
 }
 
-.dropdown-menu > .disabled > a,
-.dropdown-menu > .disabled > a:hover,
-.dropdown-menu > .disabled > a:focus {
-  color: #5B752d;
-}
-
-.disabled,
-.disabled:hover,
-.disabled:focus,
-.disabled li > a {
-  color: #FFC3D5;
-  background-color: #7A9150;
+.dropdown-menu .divider {
+  background-color: #7c9e41;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 * {
