--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.myDropdown:focus {
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
   background-color: #aed966;
 }
 
