--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+.open > myDropdown, .open > myDropdown:hover, .open > myDropdown:focus {
   background-color: #aed966;
 }
 
