--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,8 @@
   border-radius: 0 !important;
   font-family: 'Josefin Sans', sans-serif !important;
 }
+
+.main-content {
+   padding-top: 50px;
+}
+}
