--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 .dropdown:hover,
-.dropdown:focus, 
+.dropdown:focus,
 .dropdown-toggle:hover {
   background-color: #a3cc53;
 }
@@ -49,10 +49,21 @@
 
 * {
   border-radius: 0 !important;
+  border-size: 0 0;
   font-family: 'Josefin Sans', sans-serif !important;
 }
 
 .main-content {
-   margin-top: 75px;
+   margin-top: 50px;
 }
 
+.carousel-inner .item > img {
+  max-width: 100%;
+}
+
+.footer {
+  background-color: #252525;
+  color: #fff;
+  font-size: 0.9em;
+  padding-left: 1%;
+}
