--- a/css/style.css
+++ b/css/style.css
@@ -54,11 +54,12 @@
 }
 
 .main-content {
-   margin-top: 50px;
+   /*margin-top: 50px;*/
 }
 
 .carousel-inner .item > img {
   width: 100%;
+  margin-top: 50px;
 }
 
 #homePageCarousel {
